--- a/templates/books.html
+++ b/templates/books.html
@@ -1,49 +1,48 @@
+<!DOCTYPE html>
 {% extends 'alls.html' %}
 {% load static %}
 {% block content %}
-    <h1>
-        Book page
-    </h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for book in books %}
-          <div class="col">
-            <div class="card h-100">
-              <img src="{{ book.image.url }}"  alt=" not picture " width="200" >
-              <div class="card-body">
-                <h5 class="card-title">{{book.id}}. {{book.title}}</h5>
-                <p class="card-text">Descriptions: {{book.description}}</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Auther: {{book.auther}}</small>
-              </div>
-                <div class="card-footer">
-                <small class="text-body-secondary">Price: {{book.price}}</small>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Grid</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card-img-top {
+            height: 300px;
+            object-fit: cover;
+        }
+        .card-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+    </style>
+</head>
+<body>
+    <div class="container mt-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% for book in books %}
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="{{ book.image.url }}" class="card-img-top" alt="Image not available">
+                        <div class="card-body">
+                            <a href="{% url 'book-detail' book.id %}">
+                                <h5 class="card-title">{{ book.id }}. {{ book.title }}</h5>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-footer">
-                <small class="text-body-secondary">Count: {{book.count}}</small>
-              </div>
-                <div>
-<!--                    <small><p class="text-body-secondary" href="">Comments</p></small>-->
-                    <small class="text-body-secondary"><a href=""></a>
-                        <nav>
-                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                 <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
-                                         type="button" role="tab" aria-controls="nav-home" aria-selected="true"><a
-                                         href="{% url 'commit' %}">Comments</a></button>
-                            </div>
-<!--                            <div class="tab-content" id="nav-tabContent">-->
-<!--                                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">-->
-<!--                                     Comment display-->
-<!--                                 </div>-->
-<!--                            </div>-->
-                        </nav>
-                    </small>
-                </div>
-
-            </div>
-          </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
+
 
 
 {% endblock %}
