--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,6 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
 
-
     <!-- Font Icon -->
     <link rel="stylesheet" href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}">
 
@@ -51,7 +50,7 @@
                                 <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" onclick="move()" value="Log in"/>
+                                <input type="submit" name="signin" id="signin" class="form-submit" onclick="goToPage2()" value="Log in"/>
 
                             </div>
 
@@ -62,6 +61,7 @@
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
+<!--                                <li><a href="#"><i class="display-flex-center zmdi zmdi-Telegram"></i></a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -74,13 +74,14 @@
     <!-- JS -->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+<!--    <script>-->
+<!--        function goToPage2() {-->
+<!--            window.location.href = 'load.html';-->
+<!--        }-->
+<!--    </script>-->
 </body>
 <!-- This templates was made by Colorlib (https://colorlib.com) -->
 <script crossorigin="anonymous"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="myProgress">
-        <div class="progress-bar" id="myBar">0%</div>
-    </div>
 
 </html>
