--- a/templates/register.html
+++ b/templates/register.html
@@ -8,8 +8,6 @@
     <title>Sign Up Form by Colorlib</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
-
-
     <!-- Font Icon -->
     <link rel="stylesheet" href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}">
 
@@ -17,19 +15,13 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-
     <div class="main">
-
         <!-- Sign up form -->
         <section class="signup">
             <div class="container">
                 <div class="signup-content">
                     <div class="signup-form">
-                        <h2 class="form-title" style="text-align: center;"> R e g i s t e r </h2>
-                        {% if message != "" %}
-                            <h5 style="color: red; text-align: center;">{{message}}</h5>
-<!--                            <a type="submit" class="form-submit" href="{% url 'login' %}">L o g  i n </a>-->
-                        {% endif %}
+                        <h2 class="form-title">R e g i s t e r</h2>
                         <form method="POST" class="register-form" id="register-form">
                             {% csrf_token %}
                             <div class="form-group">
@@ -52,9 +44,6 @@
                                 <label for="password"><i class="zmdi zmdi-lock"></i></label>
                                 <input type="password" name="password" id="password" placeholder="Password"/>
                             </div>
-                            {% if message_password != "" %}
-                                <h6 style="color: red; text-align: center;">{{message_password}}</h6>
-                            {% endif %}
                             <div class="form-group">
                                 <label for="password2"><i class="zmdi zmdi-lock-outline"></i></label>
                                 <input type="password" name="password2" id="password2" placeholder="Repeat your password"/>
@@ -65,13 +54,12 @@
                             </div>
                             <div class="form-group form-button">
                                 <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
-
                             </div>
                         </form>
                     </div>
                     <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
-                        <a href="http://127.0.0.1:8000" class="signup-image-link">I am already member</a>
+                        <a href="{% url 'login' %}" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
             </div>
